[FIX] Fixed scrollbar height on small-screen webkit devices

--- a/src/components/KHComputer.scss
+++ b/src/components/KHComputer.scss
@@ -67,6 +67,10 @@
                     margin-left: 0.5rem;
                 }
             }
+
+            ::-webkit-scrollbar {
+                height: 0.4rem;
+            }
         }
     }
 
